src/test/ui/parser/bounds-obj-parens.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/bounds-obj-parens.rs:15:1
   |
LL | FAIL
   | ^^^^ expected one of `!` or `::` here

error: aborting due to previous error

